[package]
name = "countnite"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <edward70891@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.2"
redis = "0.17.0"
env_logger = "0.7.1"
log = "0.4.0"
async-trait = "0.1.41"
tokio = { version = "0.2.22", features = ["full"] }
structopt = "0.3.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
